--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: flask-api
+    name: python-backend-tools
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
